sandbox/output
StockProfit.cpp:73:22: error: use of undeclared identifier 'sell'
        for (int i = sell + 2; i <= endOfDay; ++i) {
                     ^
1 error generated.
make: *** [test] Error 1
